--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "bin": {
-    "brain-games": "dist/index.js"
+    "brain-games": "dist/bin/brain-games.js"
   },
   "files": [
     "dist"
