--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ichazof_project_test",
   "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Project for Hexlet",
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
   },
@@ -13,15 +12,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "eslint": "eslint"
   },
   "author": "Ilya Chazov",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^5.1.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0"
   },
   "dependencies": {
     "readline-sync": "^1.4.9"
