--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ichazof_project_test",
   "version": "1.1.0",
   "description": "Project for Hexlet",
+  "keywords": [
+    "Hexlet"
+  ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
   },
