--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build",
-    "eslint": "eslint"
+    "eslint": "eslint src"
   },
   "author": "Ilya Chazov",
   "license": "ISC",
