--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ichazof_project_test",
-  "version": "1.1.0",
+  "version": "4.2.0",
   "description": "Project for Hexlet",
   "keywords": [
     "Hexlet"
   ],
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
