--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ichazof_project_test",
-  "version": "4.4.0",
+  "version": "5.0.0",
   "description": "Project for Hexlet",
   "keywords": [
     "Hexlet"
   ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
@@ -27,11 +28,13 @@
     "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.1.9",
-    "eslint-config-airbnb-base": "^12.0.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0"
   },
   "dependencies": {
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   }
 }
