--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ichazof_project_test",
-  "version": "7.1.0",
+  "version": "8.0.0",
   "description": "Project for Hexlet",
   "keywords": [
     "Hexlet"
@@ -10,7 +10,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-balance": "dist/bin/brain-balance.js"
+    "brain-balance": "dist/bin/brain-balance.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
