--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ichazof_project_test",
-  "version": "8.0.0",
+  "version": "9.0.0",
   "description": "Project for Hexlet",
   "keywords": [
     "Hexlet"
@@ -11,7 +11,8 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
